--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,10 @@
 
     <string name="app_name">Mahdroid</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Go to the Game!</string>
     <string name="addButtonName">Add</string>
     <string name="valueFieldHint">value</string>
     <string name="suitFieldHint">suit</string>
+    <string name="title_activity_game">Game</string>
 
 </resources>
