Updated references to match correct naming conventions

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#FA1D2F</color>
     <color name="blue">#00B2EE</color>
+    <color name="orange">#F87531</color>
 
 </resources>
