--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,6 @@
     <color name="red">#FA1D2F</color>
     <color name="blue">#00B2EE</color>
     <color name="orange">#F87531</color>
+    <color name="light_gray">#d3d3d3</color>
 
 </resources>
