Added skip button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,6 @@
     <color name="blue">#00B2EE</color>
     <color name="orange">#F87531</color>
     <color name="light_gray">#d3d3d3</color>
+    <color name="chartreuse3">#66CD00</color>
 
 </resources>
