--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -59,5 +59,23 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/light_gray</item>
     </style>
+    
+    <style name="line_divider_vert">
+        <item name="android:layout_width">3dp</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+    </style>
+    
+    <style name="line_divider_horiz">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">3dp</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginRight">-5dp</item>
+        <item name="android:layout_marginLeft">-5dp</item>
+    </style>
 
 </resources>
