--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <color name="light_green">#C5E3BF</color>
     <color name="light_pink">#EED2EE</color>
     <color name="black">#000000</color>
+    <color name="grey">#A8A8A8</color>
     
     <style name="sideHand">
         <item name="android:layout_width">50dp</item>
