--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,5 +78,14 @@
         <item name="android:layout_marginRight">-5dp</item>
         <item name="android:layout_marginLeft">-5dp</item>
     </style>
+    
+    <style name="discardButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+ 		<item name="android:layout_weight">1</item>  
+ 		<item name="android:background">@color/orange</item> 
+ 		<item name="android:text">""</item>    
+    </style>
+    <string name="discard">Discard:</string>
 
 </resources>
